--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "eslint-config-next": "13.4.13",
     "imagekit": "^4.1.3",
     "imagekitio-react": "^2.0.0",
-    "lucide-react": "^0.263.1",
-    "next": "3.4.14-canary.2",
+    "lucide-react": "^0.265.0",
+    "next": "3.4.19",
     "next-auth": "^4.22.5",
     "next-cloudinary": "^4.17.1",
     "next-themes": "^0.2.1",
