--- a/package.json
+++ b/package.json
@@ -60,5 +60,8 @@
     "uuid": "^9.0.0",
     "zod": "^3.21.4",
     "zustand": "^4.4.1"
+  },
+  "devDependencies": {
+    "prisma": "^5.1.1"
   }
 }
